--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
 </head>
 
 <body>
-  <header>
-    <h1>Artists</h1>
-    <main></main>
-  </header>
+  <h1>Artists</h1>
+  <main>
+    <ol>
+    </ol>
+  </main>
 
 
 
